--- a/environments/rinkeby/permissions.yml
+++ b/environments/rinkeby/permissions.yml
@@ -86,3 +86,9 @@
   permissions:
     - hatch.aragonpm.eth:
       - 'APMRegistry::CREATE_REPO_ROLE'
+- address: '0x8c786893C22cd2dE7b770247f928D7B74b5bd550'
+  owner: '@ajsantander'
+  organization: Aragon One
+  permissions:
+    - hatch.aragonpm.eth:
+      - 'APMRegistry::CREATE_REPO_ROLE'
